# Qt_Cluster

./: CMakeLists.txt  CMakeLists.txt.user.8e470d0  CMakeLists.txt.user.fc5d531  Main.qml  main.cpp  resource.qrc  tcpclient.cpp  tcpclient.h
Script/: .profile  authorized_keys  dhcp_ntn  kill_appInstrumentCluster.sh  launch_cluster.sh  profile  qnx_server  sh
